--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             <h1>Real People. Real Advice.<br> <span>Ask with Talkin.</span></h1>
             <h2>Consult to Experts and mentors in a wide range of areas.</h2>
             <div class="text-center text-lg-left">
-              <button data-tf-slider="u0jQp9dc" data-tf-width="550" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0445AF;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;">Sign me up!</button>            <br>
-              <br>
+              <button data-tf-popup="u0jQp9dc" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0445AF;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;">Launch me</button><script src="//embed.typeform.com/next/embed.js"></script>              <br>
               <br>
             </div>
           </div>
