--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ We bring the best of the best to advice you in the best way possible, in the wid
       </div>
     </section><!-- End F.A.Q Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section ======= 
     <section id="contact" class="contact">
       <div class="container">
 
@@ -599,7 +599,7 @@ We bring the best of the best to advice you in the best way possible, in the wid
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>-- End Contact Section -->
 
   </main><!-- End #main -->
 
