photos added and subscribe added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ea67a340e1ec8b5713c4897e2/a0939d25406e8b7969f7016a9.js");</script>
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="213b1378-31f8-460d-990e-9ed0b2272a99";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   
 
   <!-- =======================================================
@@ -77,8 +78,29 @@
             <h1>Real People. Real Advice.<br> <span>Ask with Talkin.</span></h1>
             <h2>Consult to Experts and mentors in a wide range of areas.</h2>
             <div class="text-center text-lg-left" style="display: flex; align-items: center;">
-              <button data-tf-popup="u0jQp9dc" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0445AF;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;">Launch me</button><script src="//embed.typeform.com/next/embed.js"></script><br>
+              <a href="https://talkinprototype.bubbleapps.io/" class="btn-get-started scrollto">Get Started!</a><br>
             </div>
+            
+            <form  name="sub" style=" margin-top: 30px;
+            background: #fff;
+            padding: 6px 10px 6px 15px;
+            position: relative;
+            border-radius: 50px;">
+              <input style ="position: absolute;
+              top: 0;
+              right: -2px;
+              bottom: 0;
+              border: 0;
+              background: none;
+              font-size: 16px;
+              padding: 0 20px;
+              background: #1acc8d;
+              color: #fff;
+              transition: 0.3s;
+              border-radius: 50px; " class="btn-get-started scrollto" type="submit" name="submit" value="Submit" onsubmit="myFunc()"><input style="  border: 0;
+  padding: 4px;
+  width: calc(100% - 110px); " class="rounded-10000" type="email" name="email">
+            </form>
             
           </div>
         </div>
