--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">52</span>
+              <span data-toggle="counter-up">257</span>
               <p>Said they couldn't get the right person to get advice</p>
             </div>
           </div>
@@ -274,7 +274,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">47</span>
+              <span data-toggle="counter-up">187</span>
               <p>Said they'd like to try out Talkin</p>
             </div>
           </div>
@@ -290,8 +290,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">60</span>
-              <p>And more Categories to get advice in! </p>
+              <span data-toggle="counter-up">6</span>
+              <p>Categories to start with, and adding more!!</p>
             </div>
           </div>
 
